--- a/sound.html
+++ b/sound.html
@@ -51,11 +51,21 @@
     <section id="pattern">
       <h1 style="text-align: center">SOUND</h1>
       <div id="mute">
+        <!--
       <h4 style="text-align: center">Sorry, It's muted now.</h4>
+      -->
     </div>
 
+    <audio src="images/stone.aac" autoplay loop></audio>
+
+    <audio preload="metadata" controls>
+      <source src="images/stone.aac" type="audio/mp3">
+      <source src="images/stone.aac" type="audio/aac">
+      <source src="images/stone.aac" type="audio/ogg">
+    </audio>
+
       <div class="imglist_cards">
-        <!--1-->
+        <!--1
         <div class="imgcard imgcard_shape">
           <video src="images/5.mp4" muted autoplay width="100%" alt="" id=""></video>
         </div>
@@ -70,6 +80,9 @@
       </div>
 
       <div class="imglist_cards">
+
+-->
+
         <!--4
         <div class="imgcard imgcard_shape">
           <video src="images/4.mp4" muted autoplay width="100%" alt="" id=""></video>
